tmf: Don't open trace files with validation confidence 0 (Bug 436444)
... and only one valid applicable trace type is available.

Change-Id: I7efbb2ab5d25283c8778848b31fa16793478de4d
Signed-off-by: Bernd Hufmann <Bernd.Hufmann@ericsson.com>
Reviewed-on: https://git.eclipse.org/r/41692
Reviewed-by: Hudson CI
Reviewed-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>
Tested-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>